[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tellsticknet"]

[tool.hatch.build.targets.sdist]
include = ["src/tellsticknet"]

[project]
name = "tellsticknet"
version = "0.1.3"
description = "Listen for UDP sensor broadcasts from a Tellstick"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Erik Eriksson", email = "error.errorsson@gmail.com" },
    { name = "Magnus Wahlberg" }
]
keywords = ["tellstick"]
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "docopt",
    "pyyaml",
    "amqtt>=0.11",
]

[project.optional-dependencies]
test = ["pytest", "pytest-sugar", "pytest-cov"]
lint = ["ruff"]
dev = ["tellsticknet[test,lint]"]

[project.scripts]
tellsticknet = "tellsticknet.__main__:app_main"

[project.urls]
Homepage = "https://github.com/molobrakos/tellsticknet"
Repository = "https://github.com/molobrakos/tellsticknet"
